apps/base/monitoring/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: http
      port: 8080
      targetPort: 8080
